--- a/osgp/shared/pom.xml
+++ b/osgp/shared/pom.xml
@@ -94,15 +94,45 @@
     <module>parent-shared</module>
     <module>shared</module>
     <module>osgp-dto</module>
-    <module>osgp-kafka-distributionautomation</module>
-    <module>osgp-kafka-logger</module>
     <module>osgp-ws-secret-management</module>
-    <module>osgp-ws-smartmetering</module>
     <module>osgp-ws-core</module>
     <module>osgp-ws-admin</module>
-    <module>osgp-ws-tariffswitching</module>
-    <module>osgp-ws-publiclighting</module>
     <module>osgp-ws-microgrids</module>
-    <module>osgp-ws-distributionautomation</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>flexovl</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <modules>
+        <module>osgp-ws-tariffswitching</module>
+        <module>osgp-ws-publiclighting</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>smhe</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <modules>
+        <module>osgp-ws-smartmetering</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>da</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <modules>
+        <module>osgp-kafka-distributionautomation</module>
+        <module>osgp-kafka-logger</module>
+        <module>osgp-ws-distributionautomation</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
